feat(Color): Change some color and remove fix the header shadow

--- a/src/quasar-variables.sass
+++ b/src/quasar-variables.sass
@@ -1,8 +1,12 @@
-$primary   : #1976D2
-$secondary : #26A69A
+$primary   : #235698
+$secondary : #65abde
 $accent    : #9C27B0
 
-$dark      : #1D1D1D
+$dark      : #17263d
+
+$white1    : #e2eafc
+$white2    : #edf2fb
+$white3    : #fefefe
 
 $positive  : #21BA45
 $negative  : #C10015
