Feat(ProductPage.vue): Style actions button inside the table

--- a/src/quasar-variables.sass
+++ b/src/quasar-variables.sass
@@ -9,6 +9,6 @@ $white2    : #edf2fb
 $white3    : #fefefe
 
 $positive  : #21BA45
-$negative  : #C10015
+$negative  : #b13304
 $info      : #31CCEC
 $warning   : #F2C037
